--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -2,5 +2,11 @@
 // Variables
 @import 'variables';
 
+// fontawesome
+@import '~@fortawesome/fontawesome-free/scss/fontawesome';
+@import '~@fortawesome/fontawesome-free/scss/regular';
+@import '~@fortawesome/fontawesome-free/scss/solid';
+@import '~@fortawesome/fontawesome-free/scss/brands';
+
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
